--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
                 <artifactId>java-dotenv</artifactId>
                 <version>3.0.2</version>
             </dependency>
+            <dependency>
+                <groupId>com.atlassian.asap</groupId>
+                <artifactId>asap-client-okhttp3</artifactId>
+                <version>2.26.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
