--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,9 @@
                 <version>3.0.2</version>
             </dependency>
             <dependency>
-                <groupId>com.atlassian.asap</groupId>
-                <artifactId>asap-client-okhttp3</artifactId>
-                <version>2.26.0</version>
+                <groupId>com.datadoghq.okhttp</groupId>
+                <artifactId>datadog-okhttp</artifactId>
+                <version>3.12.15</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
